# opengltut

./: CMakeLists.txt
libs/include/glad/: glad.h
src/: glad.c  main.cpp
